Fix synthetic bolding of system fonts on Linux/Android

Fixes a bug introduced by https://codereview.chromium.org/1912013002

Stolen from drott@'s CL https://codereview.chromium.org/2225723003

TBR=eae@

BUG=619464

Review-Url: https://codereview.chromium.org/2222153002
Cr-Commit-Position: refs/heads/master@{#410498}

Former-commit-id: 6da9f6f5e38dfd98ac40055c441aa3c9fe768877